# recsys_gpt

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: quickstart.md
models/: README.md
recsys/: __init__.py  metrics.py
recsys/api/: main.py
recsys/data/: __init__.py  dataset.py
recsys/datasets/: __init__.py  retailrocket.py
recsys/model/: __init__.py  transformer.py
recsys/prep/: __init__.py  merge_events.py  tokenizer.py
scripts/: e2e_demo.py  export_embeddings.py  generate_docs.py  train.py
tests/: __init__.py  conftest.py  test_api.py  test_basic.py  test_bigbird_param.py  test_dataset.py  test_docker.py  test_download.py  test_merge.py  test_metrics.py  test_tokenizer.py  test_train_script.py  test_transformer.py
tests/scripts/: test_export_embeddings.py
